[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
[project]
name = "hf-tokenizer-visualizer"
version = "0.0.3"
authors = [
  { name="Saurav Prateek", email="srvptk97@gmail.com" },
]
description = "Visualize HuggingFace Byte-Pair Encoding (BPE) Tokenizer encoding process"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/SauravP97/hf-tokenizer-visualizer"
Issues = "https://github.com/SauravP97/hf-tokenizer-visualizer/issues"